car queryからデータを取得する関数の実装

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     {% bootstrap_css %}
+    <!-- {% bootstrap_javascript %} -->
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <title>Car Informatoin Portal</title>
 </head>
@@ -28,6 +29,8 @@
     </footer>
 
 
-    {% bootstrap_javascript %}
+
+    <script src="{% static 'assets/js/main.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
