add maker logo img

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         {% if models %}
 
             {% for model in models %}
-                <p>{{ model.model_make_display }}</p>
+                <p>{{ model }}</p>
             {% endfor %}
 
         {% endif %}
