index.htmlにlogo表示, hover cssの実装

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -23,3 +23,30 @@ a {
 main {
     overflow-x: hidden;
 }
+
+/*
+    origin
+*/
+.logo{
+    position: relative;
+    overflow: hidden;
+    height: 20rem;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #000000de;
+}
+
+    .logo:hover .overlay {
+    opacity: 1;
+    }
+
