--- a/templates/base.html
+++ b/templates/base.html
@@ -7,23 +7,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
     <!-- Bootstrap CSS -->
     {% bootstrap_css %}
-    <!-- {% bootstrap_javascript %} -->
-    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <title>Car Informatoin Portal</title>
 </head>
 <body>
     <header>
         {% include 'includes/base/nav.html' %}
     </header>
-    <main>
 
+    <main>
         {% block main %}
 
         {% endblock main %}
-
     </main>
+
     <footer>
         {% include 'includes/base/footer.html' %}
     </footer>
