--- a/templates/includes/base/footer.html
+++ b/templates/includes/base/footer.html
@@ -1,3 +1,3 @@
-<div class="text-center mt-auto fixed-bottom">
+<div class="text-center mt-auto">
     <p>@2021 sports car information portal all rights reserved.</p>
 </div>
