--- a/templates/portal/modelList.html
+++ b/templates/portal/modelList.html
@@ -3,5 +3,23 @@
 
 
 {% block main %}
-    <h1>model list page</h1>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-6 mx-auto text-center">
+                <img src="{% static 'assets/img/maker_logo/'|add:maker.logo %}" alt="{{ maker.name }}">
+                <div class="mt-3">
+                    {% for model in models %}
+                        <a href="{% url 'portal:result' maker.name model %}"><p>{{ model }}</p></a>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
 {% endblock main %}
