--- a/templates/portal/resultList.html
+++ b/templates/portal/resultList.html
@@ -3,5 +3,39 @@
 
 
 {% block main %}
-    <h1>result list page</h1>
+    <h1>Result</h1>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-10 mx-auto">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Model year</th>
+                            <th scope="col">Model</th>
+                            <th scope="col">Engine torque [rpm]</th>
+                            <th scope="col">Trim</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        {% for result in data %}
+                        <tr>
+                            <th scope="row">{{ forloop.counter }}</th>
+                            <td>{{ result.model_year }}</td>
+                            <td>{{ result.model_name }}</td>
+                            <td>{{ result.model_engine_torque_rpm }}</td>
+                            <td>{{ result.model_trim }}</td>
+                        </tr>
+                        {% endfor %}
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+
+
 {% endblock main %}
