--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,11 @@
 </head>
 <body>
     <header>
-        {% include 'includes/base/nav.html' %}
+
+        {% block header %}
+
+        {% endblock header %}
+
     </header>
 
     <main>
