--- a/templates/portal/resultList.html
+++ b/templates/portal/resultList.html
@@ -2,10 +2,17 @@
 {% load static %}
 
 
-{% block main %}
-    <h1>Result</h1>
+{% block header %}
 
-    <div class="container">
+    {% include 'includes/base/nav.html' with form=form %}
+
+{% endblock header %}
+
+
+{% block main %}
+
+<div class="container">
+        <h1>Result</h1>
         <div class="row">
             <div class="col-10 mx-auto">
                 <table class="table">
@@ -14,19 +21,19 @@
                             <th scope="col">#</th>
                             <th scope="col">Model year</th>
                             <th scope="col">Model</th>
-                            <th scope="col">Engine torque [rpm]</th>
+                            <th scope="col">Engine power</th>
                             <th scope="col">Trim</th>
                         </tr>
                     </thead>
                     <tbody>
 
                         {% for result in data %}
-                        <tr>
+                        <tr class="text-center">
                             <th scope="row">{{ forloop.counter }}</th>
                             <td>{{ result.model_year }}</td>
                             <td>{{ result.model_name }}</td>
-                            <td>{{ result.model_engine_torque_rpm }}</td>
-                            <td>{{ result.model_trim }}</td>
+                            <td>{{ result.model_engine_power_ps }}</td>
+                            <td class="text-start">{{ result.model_trim }}</td>
                         </tr>
                         {% endfor %}
 
