--- a/templates/portal/modelList.html
+++ b/templates/portal/modelList.html
@@ -2,11 +2,18 @@
 {% load static %}
 
 
+{% block header %}
+
+    {% include 'includes/base/nav.html' with form=form %}
+
+{% endblock header %}
+
+
 {% block main %}
     <div class="container mt-3">
         <div class="row">
             <div class="col-6 mx-auto text-center">
-                <img src="{% static 'assets/img/maker_logo/'|add:maker.logo %}" alt="{{ maker.name }}">
+                <img class="border" src="{% static 'assets/img/maker_logo/'|add:maker.logo %}" alt="{{ maker.name }}">
                 <div class="mt-3">
                     {% for model in models %}
                         <a href="{% url 'portal:result' maker.name model %}"><p>{{ model }}</p></a>
