--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
 
 
 
-    <script type="text/javascript" src="{% static 'assets/js/main.js' %}"></script>
+    <script type="module" src="{% static 'assets/js/main.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
